# postmortem

./: CHANGELOG.md  Cargo.toml  DESIGN.md  Justfile  README.md
.github/: SECURITY.md
.prodigy/: validation-result.json
specs/: 001-core-types-error-foundation.md  002-string-schema-validation.md  003-integer-schema-validation.md  004-object-schema-validation.md  005-array-schema-validation.md  006-string-formats-custom-validators.md  007-schema-combinators.md  008-cross-field-validation.md  009-schema-registry-references.md  010-json-schema-interoperability.md  011-openapi-generation.md  012-api-integration.md  013-developer-experience.md  014-effect-integration.md  015-performance-polish.md
src/: lib.rs  path.rs  registry.rs  validation.rs
src/effect/: async_validator.rs  loading.rs  mod.rs
src/error/: mod.rs  schema_error.rs
src/interop/: json_schema.rs  mod.rs
src/schema/: array.rs  combinators.rs  mod.rs  numeric.rs  object.rs  ref_schema.rs  string.rs  traits.rs
tests/: array_test.rs  combinators_test.rs  cross_field_test.rs  error_test.rs  integer_test.rs  json_schema_test.rs  path_test.rs  recursive_schemas_test.rs  references_test.rs  registry_test.rs  string_test.rs  thread_safety_test.rs
