[package]
name = "postmortem"
version = "0.1.0"
edition = "2021"
authors = ["Glen Baker <iepathos@gmail.com>"]
license = "MIT"
description = "A validation library that accumulates all errors for comprehensive feedback"
repository = "https://github.com/iepathos/postmortem"
keywords = ["validation", "error", "schema", "errors", "postmortem"]
categories = ["data-structures", "rust-patterns"]
readme = "README.md"

[dependencies]
stillwater = "0.12"
thiserror = "2"
regex = "1"
serde_json = "1"
indexmap = "2.12.1"
parking_lot = "0.12"

[dev-dependencies]
